--- a/actions/js/1.0/Dockerfile
+++ b/actions/js/1.0/Dockerfile
@@ -1,24 +1,15 @@
-FROM --platform=$TARGETPLATFORM registry.erda.cloud/retag/buildkit:v0.11.3 as buildkit
-FROM --platform=$TARGETPLATFORM registry.erda.cloud/erda/terminus-golang:1.19.7 AS builder
+FROM --platform=$TARGETPLATFORM registry.erda.cloud/erda-actions/custom-script:2.0 AS builder
 
 COPY . /go/src/github.com/erda-project/erda-actions
 WORKDIR /go/src/github.com/erda-project/erda-actions
 
-ARG TARGETARCH
-
-# go build
-RUN GOPROXY=https://goproxy.cn,direct GOOS=linux GOARCH=$TARGETARCH go build -o /opt/action/run github.com/erda-project/erda-actions/actions/js/1.0/internal/cmd
+RUN go build -o /opt/action/run github.com/erda-project/erda-actions/actions/js/1.0/internal/cmd
 RUN mkdir -p /opt/action/comp && \
     cp -r actions/js/1.0/comp/* /opt/action/comp
 
-FROM --platform=$TARGETPLATFORM registry.erda.cloud/erda-x/openjdk-maven-node:8_11-3.9-14
-
-RUN yum install -y yum-utils && \
-    yum-config-manager --add-repo http://mirrors.aliyun.com/docker-ce/linux/centos/docker-ce.repo && \
-    yum -y install docker-ce-cli
+FROM --platform=$TARGETPLATFORM registry.erda.cloud/erda-actions/custom-script:2.0
 
 ENV NODE_OPTIONS=--max_old_space_size=1800
 
 COPY --from=builder /opt/action/run /opt/action/run
-COPY --from=buildkit /usr/bin/buildctl /usr/bin/buildctl
 COPY --from=builder /opt/action/comp /opt/action/comp
