--- a/dockerfiles/erda-migration/sandbox80/Dockerfile
+++ b/dockerfiles/erda-migration/sandbox80/Dockerfile
@@ -1,28 +1,24 @@
-FROM registry.erda.cloud/retag/mysql-80-centos7
+FROM registry.erda.cloud/erda-addons/mylet:v8.0
 
-MAINTAINER chenzhongrun "zhongrun.czr@alibaba-inc.com"
+USER root:root
+ENTRYPOINT ["docker-entrypoint.sh"]
+EXPOSE 3306 33060
+CMD ["mysqld"]
 
-USER root
-
-ENV TZ=Asia/Shanghai
 ENV MYSQL_ROOT_PASSWORD="12345678"
 ENV SANDBOX_INNER_PASSWORD="12345678"
 ENV MYSQL_ALLOW_EMPTY_PASSWORD yes
 
 COPY dockerfiles/erda-migration/my.cnf /etc/my.cnf
 
-# install python3
-RUN yum install -y mariadb-devel gcc python3-devel.x86_64
+RUN yum erase -y mysql-community-server-minimal && yum install -y mysql-server mysql-devel gcc python3 python3-devel
+
+# https://bugs.mysql.com/bug.php?id=91395
+RUN setcap -r /usr/libexec/mysqld
+
 RUN python3 -m pip --no-cache-dir install pip -U
 RUN python3 -m pip --no-cache-dir config set global.index-url https://mirrors.aliyun.com/pypi/simple
-RUN python3 -m pip --no-cache-dir install mysql-connector-python==8.0.26 django==3.2.4 pytz==2021.1 sqlparse==0.4.1
+RUN python3 -m pip --no-cache-dir install mysql-connector-python==8.0.30 django==3.2.4 pytz==2021.1 sqlparse==0.4.1
 
-# support chinese
-RUN yum install kde-l10n-Chinese -y
-RUN yum install glibc-common -y
-RUN localedef -c -f UTF-8 -i zh_CN zh_CN.utf8
-ENV LC_ALL zh_CN.UTF-8
-
-# add healthy probe
 RUN mkdir /logs
 RUN touch /logs/healthy
