fix: docker-push action pull insecure error (#529)
Signed-off-by: iutx <root@viper.run>

--- a/actions/docker-push/1.0/Dockerfile
+++ b/actions/docker-push/1.0/Dockerfile
@@ -1,5 +1,5 @@
-FROM --platform=$BUILDPLATFORM gcr.io/go-containerregistry/gcrane:v0.7.0 as gcrane
-FROM --platform=$BUILDPLATFORM registry.erda.cloud/erda/terminus-golang:1.19.7
+FROM --platform=$BUILDPLATFORM registry.erda.cloud/retag/gcrane:v0.15.1 as gcrane
+FROM --platform=$BUILDPLATFORM registry.erda.cloud/erda/terminus-golang:1.19.7 as builder
 
 ARG TARGETARCH
 
@@ -8,6 +8,11 @@ WORKDIR /go/src/github.com/erda-project/erda-actions
 
 ARG ARCH
 
+ENV GOPROXY=https://goproxy.cn,direct
+
 RUN GOOS=linux GOARCH=$TARGETARCH go build -o /opt/action/run github.com/erda-project/erda-actions/actions/docker-push/1.0/internal
 
+FROM --platform=$BUILDPLATFORM registry.erda.cloud/retag/debian:buster-slim
+
 COPY --from=gcrane /ko-app/gcrane /usr/bin
+COPY --from=builder /opt/action/run /opt/action/run
