--- a/actions/dice/2.0/Dockerfile
+++ b/actions/dice/2.0/Dockerfile
@@ -1,18 +1,12 @@
-FROM --platform=$TARGETPLATFORM registry.erda.cloud/retag/golang:1.16-alpine3.14 AS builder
-ENV GO111MODULE=on \
-    CGO_ENABLED=0 \
-    GOOS=linux \
-    GOARCH=$ARCH \
-    GOPROXY=https://goproxy.cn
+FROM registry.erda.cloud/erda-x/golang:1.17 as builder
+
+ENV CGO_ENABLED=0
 
 COPY . /go/src/github.com/erda-project/erda-actions
 WORKDIR /go/src/github.com/erda-project/erda-actions
 
-ARG ARCH
+RUN go build -o /assets/run           actions/dice/2.0/internal/cmd/dice/*.go
+RUN go build -o /assets/when_sigterm  actions/dice/2.0/internal/cmd/cancel/*.go
 
-# go build
-RUN GOOS=linux GOARCH=$ARCH go build -o /assets/run           actions/dice/2.0/internal/cmd/dice/*.go
-RUN GOOS=linux GOARCH=$ARCH go build -o /assets/when_sigterm  actions/dice/2.0/internal/cmd/cancel/*.go
-
-FROM --platform=$TARGETPLATFORM registry.erda.cloud/retag/alpine:3.14
+FROM registry.erda.cloud/erda-x/oraclelinux:7
 COPY --from=builder /assets /opt/action
