--- a/actions/dice/1.0/Dockerfile
+++ b/actions/dice/1.0/Dockerfile
@@ -1,13 +1,10 @@
-FROM --platform=$TARGETPLATFORM registry.erda.cloud/erda/terminus-golang:1.17.12 AS builder
+FROM registry.erda.cloud/erda-x/golang:1.17 as builder
 
 COPY . /go/src/github.com/erda-project/erda-actions
 WORKDIR /go/src/github.com/erda-project/erda-actions
 
-ARG ARCH
+RUN go build -o /assets/run           actions/dice/1.0/internal/run/cmd/*.go
+RUN go build -o /assets/when_sigterm  actions/dice/1.0/internal/post/cmd/*.go
 
-# go build
-RUN GOOS=linux GOARCH=$ARCH go build -o /assets/run           actions/dice/1.0/internal/run/cmd/*.go
-RUN GOOS=linux GOARCH=$ARCH go build -o /assets/when_sigterm  actions/dice/1.0/internal/post/cmd/*.go
-
-FROM --platform=$TARGETPLATFORM registry.erda.cloud/erda/terminus-centos:base
+FROM registry.erda.cloud/erda-x/oraclelinux:7
 COPY --from=builder /assets /opt/action
