--- a/actions/git-checkout/1.0/dice.yml
+++ b/actions/git-checkout/1.0/dice.yml
@@ -1,7 +1,7 @@
 ### job 配置项
 jobs:
   git-checkout:
-    image: registry.erda.cloud/erda-actions/git-checkout-action:1.0-20211103-d346e63
+    image: registry.erda.cloud/erda-actions/git-checkout-action:1.0-20230516131755-d565716
     resources:
       cpu: 0.5
       mem: 1024
