--- a/actions/buildpack/1.0/bp/java/pack/springboot/Dockerfile
+++ b/actions/buildpack/1.0/bp/java/pack/springboot/Dockerfile
@@ -1,3 +1,6 @@
+# source: dockerfiles/pyroscope/java/Dockerfile
+# /app/pyroscope.jar natively supports amd64/arm64 arch.
+FROM registry.erda.cloud/retag/pyroscope-java:v0.11.3 as pyroscope-java
 # Build app image
 FROM registry.erda.cloud/erda-x/openjdk:8_11
 
@@ -20,6 +23,8 @@ RUN \
     if [ $USE_AGENT = true ]; then \
         mkdir -p /opt/spot; tar -xzf /tmp/spot-agent.tgz -C /opt/spot; rm -rf /tmp/spot-agent.tgz; \
     fi
+
+COPY --from=pyroscope-java /app /opt/pyroscope
 
 ENV SPRING_PROFILES_ACTIVE=default
 
