--- a/actions/js/1.0/Dockerfile
+++ b/actions/js/1.0/Dockerfile
@@ -1,4 +1,4 @@
-FROM --platform=$TARGETPLATFORM registry.erda.cloud/erda-actions/custom-script:2.0 AS builder
+FROM registry.erda.cloud/erda-actions/custom-script:2.0 AS builder
 
 COPY . /go/src/github.com/erda-project/erda-actions
 WORKDIR /go/src/github.com/erda-project/erda-actions
@@ -7,7 +7,7 @@ RUN go build -o /opt/action/run github.com/erda-project/erda-actions/actions/js/
 RUN mkdir -p /opt/action/comp && \
     cp -r actions/js/1.0/comp/* /opt/action/comp
 
-FROM --platform=$TARGETPLATFORM registry.erda.cloud/erda-actions/custom-script:2.0
+FROM registry.erda.cloud/erda-actions/custom-script:2.0
 
 ENV NODE_OPTIONS=--max_old_space_size=1800
 
