feature: custom-script upgrade git (#540)

--- a/actions/custom-script/2.0/Dockerfile
+++ b/actions/custom-script/2.0/Dockerfile
@@ -31,4 +31,8 @@ RUN chown -R dice:dice /home/dice/.m2 \
   && go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.51.2 \
   && npm install -g yarn
 
+ARG TARGETARCH
+RUN yum erase -y git && cd /opt && curl -O -L https://erda-project.oss-cn-hangzhou.aliyuncs.com/erda-addons/git-$TARGETARCH.tgz && tar -xzvf git-$TARGETARCH.tgz && rm -fv git-$TARGETARCH.tgz
+ENV PATH=/opt/git/bin:$PATH
+
 WORKDIR $GOPATH
